<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RateProductActivity"
    android:orientation="vertical">

    <!-- THE HEADER -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:text="@string/txt_rateproduct_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center_horizontal"/>
        <View
            android:layout_marginTop="-3dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <!-- THE INFORMATION ABOUT THE PRODUCT TO RATE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_rateproduct_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_rateproduct_title"/>

        <TextView
            android:id="@+id/tv_rateproduct_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_rateproduct_description"/>

        <TextView
            android:id="@+id/tv_rateproduct_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_rateproduct_location"/>

        <TextView
            android:id="@+id/tv_rateproduct_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_rateproduct_price"/>

        <EditText
            android:id="@+id/et_puntuation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_rateproduct_setpuntuation"/>

        <Button
            android:id="@+id/bt_rateProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rateProductText" />

    </LinearLayout>


</LinearLayout>