<?xml version="1.0" encoding="utf-8"?>

<!-- IN THIS ACTIVITY THERE ARE A LOGIN FORM TO OPEN THE APP -->
<!-- WITH A GENERAL LINEARLAYOUT AND 2 MORE TO HAVE A ORDERED STRUCTURE -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <!-- THIS LINEARLAYOUT HAS THE LOGIN FORM WITH 2 EDITTEXT, 1 BUTTON AND A LINK TO THE SIGNUPACTIVITY -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_et_username"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_et_password"/>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_bt_login"/>

        <!-- THIS LINEARLAYOUT CONTAINS THE LINK TO THE SIGNUP ACTIVITY -->

        <LinearLayout
            android:id="@+id/ll_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_tv_signup"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_marginTop="-3dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>